[package]
name = "data_structures_and_algorithms_in_rust"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.4"  # bench test
gnuplot = "0.0.37"

[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark.rs"
harness = false
[[bench]]
name = "stack"
path = "benches/stack/stack_benchmark.rs"
harness = false


[dependencies]
byteorder = "1.4.3"
rand = "0.8.5"